--- a/test_ansible/docker-compose.yml
+++ b/test_ansible/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   bind9:
-    image: internetsystemsconsortium/bind9:latest  # Utiliser la version 'latest' ou une autre version valide
+    image: bind9:latest  # Utiliser la version 'latest' ou une autre version valide
     container_name: bind9
     networks:
       - bind_network
