--- a/test_ansible/inventory.yml
+++ b/test_ansible/inventory.yml
@@ -11,4 +11,5 @@ all:
           ansible_host: 127.0.0.1
           ansible_port: 2222
           ansible_user: root
-          ansible_ssh_pass: root
+          ansible_ssh_pass: root 
+          ansible_ssh_private_key_file: /path/to/private_key  
