--- a/test_ansible/playbook.yml
+++ b/test_ansible/playbook.yml
@@ -10,18 +10,24 @@
           - docker-compose
         state: present
         update_cache: yes
+        
+    - name: Créer le répertoire de destination
+      file:
+        path: /root/test_ansible
+        state: directory
+        mode: '0755'
 
     - name: Copier le fichier docker-compose.yml
       copy:
         src: docker-compose.yml
-        dest: "{{ lookup('env', 'HOME') }}/docker-compose.yml"
+        dest: "{{ lookup('env', 'HOME') }}/test_ansible/docker-compose.yml"
     
     - name: Lancer Docker Compose
       command: docker-compose up -d
       args:
-        chdir: "{{ lookup('env', 'HOME') }}"
-
-    - name: Installer le serveur SSH dans le conteneur Bind9
+        chdir: "{{ lookup('env', 'HOME') }}/test_ansible"
+    
+    - name: Installer openssh-server dans le conteneur Bind9
       docker_container:
         name: bind9
         image: ubuntu/bind9:latest
@@ -29,8 +35,10 @@
         state: started
         restart_policy: unless-stopped
         detach: true
+        ports:
+          - "2222:22"
 
-    - name: Configurer SSH pour écouter sur le port 2222 dans le conteneur
+    - name: Configurer SSH pour écouter sur le port 2222
       docker_container:
         name: bind9
         command: bash -c "echo 'Port 2222' >> /etc/ssh/sshd_config && echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config"
@@ -45,6 +53,11 @@
         state: started
         restart_policy: unless-stopped
         detach: true
+
+    - name: Vérifier si Bind9 fonctionne
+      command: "/usr/sbin/named -f"
+      async: 1
+      poll: 0
 
 - name: Configurer Bind9 dans le conteneur
   hosts: bind9_container
