--- a/test_ansible/playbook.yml
+++ b/test_ansible/playbook.yml
@@ -1,4 +1,3 @@
----
 - name: Déployer Bind9 avec Docker et Ansible
   hosts: docker_host
   become: true
@@ -22,50 +21,49 @@
         src: docker-compose.yml
         dest: "{{ lookup('env', 'HOME') }}/test_ansible/docker-compose.yml"
     
-    - name: Lancer Docker Compose en mode détaché
+    - name: Lancer Docker Compose
       command: docker-compose up -d
       args:
         chdir: "{{ lookup('env', 'HOME') }}/test_ansible"
     
-    - name: Attendre que le conteneur Bind9 soit prêt
-      wait_for:
-        host: "127.0.0.1"
-        port: "2222"
-        state: started
-        timeout: 60
-        delay: 10
+    - name: Redémarrer Bind9
+      command: "/usr/sbin/named -f"
+      async: 1
+      poll: 0
 
-    - name: Installer openssh-server dans le conteneur Bind9
-      docker_container:
-        name: bind9
-        image: ubuntu/bind9:latest
-        command: bash -c "apt-get update && apt-get install -y openssh-server && service ssh start && tail -f /dev/null"
-        state: started
-        restart_policy: unless-stopped
-        detach: true
-        ports:
-          - "2222:22"
-
-    - name: Configurer SSH pour écouter sur le port 2222
-      docker_container:
-        name: bind9
-        command: bash -c "echo 'Port 2222' >> /etc/ssh/sshd_config && echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config"
-        state: started
-        restart_policy: unless-stopped
-        detach: true
-
-    - name: Démarrer le service SSH dans le conteneur Bind9
-      docker_container:
-        name: bind9
-        command: bash -c "service ssh start"
-        state: started
-        restart_policy: unless-stopped
-        detach: true
 
 - name: Configurer Bind9 dans le conteneur
   hosts: bind9_container
   become: true
   tasks:
+    - name: Installer le serveur SSH dans le conteneur
+      apt:
+        name: openssh-server
+        state: present
+        update_cache: yes
+
+    - name: Configurer SSH pour écouter sur le port 2222
+      lineinfile:
+        path: /etc/ssh/sshd_config
+        regexp: '^#?Port'
+        line: 'Port 2222'
+      notify:
+        - Restart SSH service
+
+    - name: Autoriser la connexion root via SSH
+      lineinfile:
+        path: /etc/ssh/sshd_config
+        regexp: '^#?PermitRootLogin'
+        line: 'PermitRootLogin yes'
+      notify:
+        - Restart SSH service
+
+    - name: Démarrer le service SSH dans le conteneur
+      service:
+        name: ssh
+        state: started
+        enabled: yes
+
     - name: Copier la configuration named.conf
       template:
         src: named.conf.j2
@@ -80,3 +78,9 @@
       command: "/usr/sbin/named -f"
       async: 1
       poll: 0
+
+  handlers:
+    - name: Restart SSH service
+      service:
+        name: ssh
+        state: restarted
