--- a/test_ansible/docker-compose.yml
+++ b/test_ansible/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - ./zones:/var/lib/bind
       - bind9_data:/etc/bind  # Montage des données persistantes
       - type: bind
-        source: /root/SAE5.02/test_ansible/roles/bind9/named.conf
+        source: /home/toine-fa/SAE5.02/test_ansible/roles/bind9/named.conf
         target: /etc/bind/named.conf
 
 volumes:
