--- a/test_ansible/docker-compose.yml
+++ b/test_ansible/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - type: bind
         source: /home/toine-fa/SAE5.02/test_ansible/roles/bind9/named.conf
         target: /etc/bind/named.conf
+    command: bash -c " apt-get update && apt-get install ssh"
+
 
 volumes:
   bind9_data:
