--- a/test_ansible/docker-compose.yml
+++ b/test_ansible/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   bind9:
     build:
-      context: ./dockerfile  # Indique que le Dockerfile se trouve dans ce répertoire
+      context: /home/toine-fa/SAE5.02/test_ansible/Dockerfile  # Indique que le Dockerfile se trouve dans ce répertoire
     container_name: bind9  # Nom unique du conteneur
     ports:
       - "53:53/udp"        # Port DNS UDP
