--- a/test_ansible/inventory.yml
+++ b/test_ansible/inventory.yml
@@ -12,3 +12,4 @@ all:
           ansible_port: 2222
           ansible_user: root
           ansible_ssh_pass: root
+          ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
