--- a/test_ansible/roles/bind9/tasks/main.yml
+++ b/test_ansible/roles/bind9/tasks/main.yml
@@ -12,6 +12,8 @@
       - openssh-server
     state: present
     update_cache: yes
+- name: Charger les variables pour Bind9
+  include_vars: vars/main.yml
 
 - name: Copier la configuration principale de Bind9
   template:
