--- a/test_ansible/roles/bind9/tasks/main.yml
+++ b/test_ansible/roles/bind9/tasks/main.yml
@@ -17,7 +17,7 @@
 
 - name: Copier la configuration principale de Bind9
   template:
-    src: named.conf.j2
+    src: templates/named.conf.j2
     dest: /etc/bind/named.conf
 
 - name: Copier les fichiers de zones DNS
