--- a/test_ansible/roles/bind9/inventaire.ini
+++ b/test_ansible/roles/bind9/inventaire.ini
@@ -1,5 +1,5 @@
 [all]
-192.168.0.2 ansible_user=root ansible_ssh_pass=votre_mdp ansible_ssh_private_key_file=/chemin/vers/cle/privée
+192.168.0.2 ansible_user=root ansible_ssh_pass=root ansible_ssh_private_key_file=/chemin/vers/cle/privée
 
 [docker_host]
 192.168.0.2
