--- a/test_ansible/roles/bind9/tasks/main.yml
+++ b/test_ansible/roles/bind9/tasks/main.yml
@@ -1,7 +1,7 @@
 # Configuration de Bind9
-- name: Mettre à jour le cache APT
-  apt:
-    update_cache: yes
+# - name: Mettre à jour le cache APT
+  # apt:
+    # update_cache: yes
 
 - name: Afficher les variables chargées
   debug:
