--- a/test_ansible/roles/bind9/tasks/main.yml
+++ b/test_ansible/roles/bind9/tasks/main.yml
@@ -23,6 +23,10 @@
   template:
     src: templates/named.conf.j2
     dest: /etc/bind/named.conf
+    owner: root
+    group: bind
+    mode: '0644'
+    unsafe_writes: true
   become: true
 
 - name: Copier les fichiers de zones DNS
