--- a/test_ansible/roles/bind9/tasks/main.yml
+++ b/test_ansible/roles/bind9/tasks/main.yml
@@ -36,10 +36,20 @@
 - name: Vérifier la validité des fichiers de zone
   command: named-checkzone {{ bind_zone_name }} /etc/bind/db.{{ bind_zone_name }}
 
-- name: Redémarrer le conteneur Docker contenant Bind9
-  docker_container:
-    name: bind9
-    state: stopped
+- name: Restart apparmor -- bind9
+  ansible.builtin.service:
+    name: apparmor
+    state: restarted
+
+- name: restart DNS system
+  ansible.builtin.service:
+    name: "{{ bind9_service_name }}"
+    state: restarted
+
+- name: reload DNS system
+  ansible.builtin.command: "rndc reload"
+  changed_when: True
+
 
 #- name: Démarrer ou redémarrer Bind9
   # service:
