--- a/test_ansible/roles/bind9/tasks/main.yml
+++ b/test_ansible/roles/bind9/tasks/main.yml
@@ -36,20 +36,30 @@
 - name: Vérifier la validité des fichiers de zone
   command: named-checkzone {{ bind_zone_name }} /etc/bind/db.{{ bind_zone_name }}
 
-- name: Restart apparmor -- bind9
-  ansible.builtin.service:
-    name: apparmor
+# Lister les conteneurs Docker en cours d'exécution qui correspondent au nom du conteneur Bind9
+- name: Lister les conteneurs Docker en cours d'exécution pour Bind9
+  command: docker container ls --filter name={{ container_name }} --format "{{ '{{' }}.Names{{ '}}' }}"
+  register: running_containers
+
+# Vérifier que des conteneurs ont été trouvés
+- name: Afficher les conteneurs Docker en cours d'exécution
+  debug:
+    msg: "{{ running_containers.stdout_lines }}"
+
+# Si des conteneurs sont trouvés, les redémarrer
+- name: Redémarrer le conteneur Docker Bind9
+  docker_container:
+    name: "{{ item }}"
     state: restarted
+  loop: "{{ running_containers.stdout_lines }}"
+  when: running_containers.stdout_lines | length > 0
+  become: true
 
-- name: restart DNS system
-  ansible.builtin.service:
-    name: bind
-    state: restarted
-
-- name: reload DNS system
-  ansible.builtin.command: "rndc reload"
-  changed_when: True
-
+# Si aucun conteneur n'est trouvé, afficher un message d'erreur
+- name: Avertir si aucun conteneur Docker n'a été trouvé
+  debug:
+    msg: "Aucun conteneur Docker pour Bind9 trouvé. Assurez-vous que le conteneur est en cours d'exécution."
+  when: running_containers.stdout_lines | length == 0
 
 #- name: Démarrer ou redémarrer Bind9
   # service:
