--- a/test_ansible/roles/bind9/tasks/main.yml
+++ b/test_ansible/roles/bind9/tasks/main.yml
@@ -38,7 +38,7 @@
 
 # Lister les conteneurs Docker en cours d'exécution qui correspondent au nom du conteneur Bind9
 - name: Lister les conteneurs Docker en cours d'exécution pour Bind9
-  command: docker container ls --filter name={{ container_name }} --format "{{ '{{' }}.Names{{ '}}' }}"
+  command: docker container ls
   register: running_containers
 
 # Vérifier que des conteneurs ont été trouvés
