--- a/test_ansible/roles/samba/inventaire.ini
+++ b/test_ansible/roles/samba/inventaire.ini
@@ -1,8 +1,2 @@
-[all]
-192.168.0.2 ansible_user=root ansible_ssh_pass=root ansible_ssh_private_key_file=/chemin/vers/cle/privée
-
-[docker_host]
-192.168.0.2
-
-[bind9_container]
-192.168.0.2
+[samba]
+192.168.0.3 ansible_user=root ansible_ssh_pass=root
