--- a/test_ansible/roles/samba/Dockerfile
+++ b/test_ansible/roles/samba/Dockerfile
@@ -1,15 +1,16 @@
-FROM ubuntu/bind9:latest
+FROM ubuntu:20.04
 
-# Met à jour le système et installe OpenSSH Server
-RUN apt-get update && apt-get install -y openssh-server && \
+# Met à jour le système et installe les paquets nécessaires pour Bind9 et SSH
+RUN apt-get update && \
+    apt-get install -y bind9 bind9utils samba smbclient krb5-user openssh-server && \
     mkdir -p /var/run/sshd && \
     echo 'root:root' | chpasswd && \
     sed -i 's/#Port 22/Port 22/' /etc/ssh/sshd_config && \
     sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && \
     sed -i 's@UsePAM yes@UsePAM no@g' /etc/ssh/sshd_config
 
-# Expose le port 22 pour SSH
-EXPOSE 22
+# Expose les ports nécessaires (SSH, Samba, et DNS)
+EXPOSE 22 53/udp 53/tcp 88/tcp 135/tcp 137-138/udp 139/tcp 389/tcp 445/tcp 464/tcp 636/tcp 3268-3269/tcp
 
-# Commande d'entrée pour démarrer SSH et Bind9
-CMD service ssh start
+# Commande d'entrée pour démarrer SSH
+CMD service ssh start && bash
