--- a/test_ansible/roles/bind9/inventaire.ini
+++ b/test_ansible/roles/bind9/inventaire.ini
@@ -1,3 +1,6 @@
+[docker_host]
+dns ansible_host=127.0.0.1 ansible_port=2222 ansible_user=root ansible_connection=ssh
+
 [bind9]
 192.168.0.2 ansible_user=root ansible_ssh_pass=root
 
