--- a/test_ansible/roles/bind9/inventaire.ini
+++ b/test_ansible/roles/bind9/inventaire.ini
@@ -1,7 +1,7 @@
 [docker_host]
 192.168.0.2 ansible_user=root ansible_ssh_pass=root
 
-[bind9]
+[dns]
 192.168.0.2 ansible_user=root ansible_ssh_pass=root
 
 [samba]
