--- a/test_ansible/roles/samba/inventaire.ini
+++ b/test_ansible/roles/samba/inventaire.ini
@@ -1,7 +1,7 @@
 [docker_host]
-dns ansible_host=127.0.0.1 ansible_port=2222 ansible_user=root ansible_connection=ssh
+192.168.0.2 ansible_user=root ansible_ssh_pass=root
 
-[bind9]
+[dns]
 192.168.0.2 ansible_user=root ansible_ssh_pass=root
 
 [samba]
